--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="E-pic, a photos e-commerce" />
-
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>E-pic</title>
   </head>
